--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
 layout: home
-title: My website
-subtitle: This is where I will tell my friends way too much about me
+title: MY DIARY
+subtitle: Toi tao ra cai blog nay de luu tru qua trinh hoc tap cung nhu nhung cai gi day hay hay cua minh
 ---
