--- a/index.html
+++ b/index.html
@@ -10,6 +10,106 @@
         @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap');
     </style>
     <script src="./script.js"></script>
+   <style>
+       * {
+    border: 0;
+    padding: 0;
+    margin: 0;
+    font-family: 'Open sans', sans-serif;
+}
+body {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-image: url(./background.jpg);
+    background-repeat: repeat;
+    background-size:contain;
+}
+.item {
+    width: 100%;
+    height: 65px;
+    background-color: #160F22;
+    display: flex;
+    overflow: hidden;
+    align-items: center;
+}
+.item-first {
+    display: flex;
+    margin-left: 6px;
+}
+.name {
+    color: #FEFFFE;
+}
+.achivements {
+    color: thistle;
+}
+
+.fa-sun {
+    color: rgb(255, 80, 80);
+    font-size: 40px;
+    margin-right: 6px;
+}
+.item-thanks {
+    color: #FEFFFE;
+}
+.fa-heart {
+    color:rgb(29, 250, 250);
+}
+
+.item-content {
+    display: flex;
+    flex-direction: column;
+    line-height: 35px;
+    margin-left: 80px;
+}
+ul li {
+    list-style-type: none;
+}
+.itemvip:hover {
+    background-color: red;
+    transition: 0.5s;
+}
+.itemok {
+    border-top: 2px solid white;
+}
+.list {
+
+    margin-top: 20px;
+    background-color: aquamarine;
+    height: auto; 
+    width: max-content;   
+    box-shadow: 
+        0 0 10px 0px gray,
+        0 0 10px 0px gray,
+        0px 0 10px 0px gray;
+}
+.title {
+    background-color: lightcoral;
+    height: 56px;
+    font-size: 40px;
+    font-weight:bolder;
+    text-align: center;
+    line-height: 56px;
+    color:antiquewhite ;
+    border-radius: 4px 4px 0px 0px;
+}
+.itemlast {
+    border-radius: 0px 0px 4px 4px;
+}
+@media screen and (max-width: 874px) {
+    .list {
+        width: 100%;
+        margin-top: 0;
+    }
+    .title {
+        height: auto;
+    }
+    .item {
+        height: auto;
+    }
+}
+   </style>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
