--- a/index.html
+++ b/index.html
@@ -10,110 +10,24 @@
         @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap');
     </style>
     <script src="./script.js"></script>
-   <style>
-       * {
-    border: 0;
-    padding: 0;
-    margin: 0;
-    font-family: 'Open sans', sans-serif;
-}
-body {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    background-image: url(./background.jpg);
-    background-repeat: repeat;
-    background-size:contain;
-}
-.item {
-    width: 100%;
-    height: 65px;
-    background-color: #160F22;
-    display: flex;
-    overflow: hidden;
-    align-items: center;
-}
-.item-first {
-    display: flex;
-    margin-left: 6px;
-}
-.name {
-    color: #FEFFFE;
-}
-.achivements {
-    color: thistle;
-}
 
-.fa-sun {
-    color: rgb(255, 80, 80);
-    font-size: 40px;
-    margin-right: 6px;
-}
-.item-thanks {
-    color: #FEFFFE;
-}
-.fa-heart {
-    color:rgb(29, 250, 250);
-}
-
-.item-content {
-    display: flex;
-    flex-direction: column;
-    line-height: 35px;
-    margin-left: 80px;
-}
-ul li {
-    list-style-type: none;
-}
-.itemvip:hover {
-    background-color: red;
-    transition: 0.5s;
-}
-.itemok {
-    border-top: 2px solid white;
-}
-.list {
-
-    margin-top: 20px;
-    background-color: aquamarine;
-    height: auto; 
-    width: max-content;   
-    box-shadow: 
-        0 0 10px 0px gray,
-        0 0 10px 0px gray,
-        0px 0 10px 0px gray;
-}
-.title {
-    background-color: lightcoral;
-    height: 56px;
-    font-size: 40px;
-    font-weight:bolder;
-    text-align: center;
-    line-height: 56px;
-    color:antiquewhite ;
-    border-radius: 4px 4px 0px 0px;
-}
-.itemlast {
-    border-radius: 0px 0px 4px 4px;
-}
-@media screen and (max-width: 874px) {
-    .list {
-        width: 100%;
-        margin-top: 0;
-    }
-    .title {
-        height: auto;
-    }
-    .item {
-        height: auto;
-    }
-}
-   </style>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
-<body>
-
+<body>  <div class="quote">
+            tôi không sống để trả thù, nhưng cũng không có chuyện "chúng mày" được sống cuộc đời như chúng mày mong muốn
+        </div>
+        <div class="todo">
+            <div class="content">
+                <span>Vũ Duy Nhiên</span>
+                <p class="todolist">Ngày ngủ 5 tiếng</p>
+                <p class="todolist">Giải thuật 3 bài</p>
+                <p class="todolist">Học javascript mỗi ngày (tối đa 1 tiếng)</p>
+                <p class="todolist">Tiếng anh đọc tài liệu lập trình</p>
+                <p class="todolist">Toán cần cho tư duy lập trình tốt hơn</p>
+                <p class="todolist">Vật lí quan trọng cho lập trình</p>
+                <p class="todolist">Mỗi tuần đọc 3 quyển sách</p>
+            </div> 
+        </div>
         <div class="list">
             <div class="title">
                 Top 5 những người Vũ Duy Nhiên yêu quý
@@ -226,6 +140,18 @@ ul li {
                 </li>
             </ul>
         </div>
-        <div class="content"></div>
+
+
+        <div class="todo">
+            <div class="content">
+                <span>Vũ Duy Nhiên mục tiêu 2021</span>
+                <p class="todolist">nắm chắc cơ bản javascript</p>
+                <p class="todolist">hiểu một số cấu trúc dữ liệu và giải thuật</p>
+                <p class="todolist">Nắm chắc cơ bản c++</p>
+                <p class="todolist">Làm tốt môn toán lí anh</p>
+                <p class="todolist">đọc được nhiều sách </p>
+                <p class="todolist">không làm chuyện xấu nữa</p>
+            </div> 
+        </div>
 </body>
 </html>
