--- a/index.html
+++ b/index.html
@@ -13,21 +13,8 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
-<body>  <div class="quote">
-            tôi không sống để trả thù, nhưng cũng không có chuyện "chúng mày" được sống cuộc đời như chúng mày mong muốn
-        </div>
-        <div class="todo">
-            <div class="content">
-                <span>Vũ Duy Nhiên</span>
-                <p class="todolist">Ngày ngủ 5 tiếng</p>
-                <p class="todolist">Giải thuật 3 bài</p>
-                <p class="todolist">Học javascript mỗi ngày (tối đa 1 tiếng)</p>
-                <p class="todolist">Tiếng anh đọc tài liệu lập trình</p>
-                <p class="todolist">Toán cần cho tư duy lập trình tốt hơn</p>
-                <p class="todolist">Vật lí quan trọng cho lập trình</p>
-                <p class="todolist">Mỗi tuần đọc 3 quyển sách</p>
-            </div> 
-        </div>
+<body>  <
+        
         <div class="list">
             <div class="title">
                 Top 5 những người Vũ Duy Nhiên yêu quý
@@ -141,17 +128,5 @@
             </ul>
         </div>
 
-
-        <div class="todo">
-            <div class="content">
-                <span>Vũ Duy Nhiên mục tiêu 2021</span>
-                <p class="todolist">nắm chắc cơ bản javascript</p>
-                <p class="todolist">hiểu một số cấu trúc dữ liệu và giải thuật</p>
-                <p class="todolist">Nắm chắc cơ bản c++</p>
-                <p class="todolist">Làm tốt môn toán lí anh</p>
-                <p class="todolist">đọc được nhiều sách </p>
-                <p class="todolist">không làm chuyện xấu nữa</p>
-            </div> 
-        </div>
 </body>
 </html>
